<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rdMaiuscula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LMaiscula"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rdMinuscula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LMinuscula"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rdAoContrario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AoContrario"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rdTrocarLetra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TrocarLetra"
                android:textSize="16sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/fundo_button"
            android:ems="10"
            android:hint="@string/editText"
            android:inputType="textMultiLine"
            android:padding="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextLetra"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnGerar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:backgroundTint="#A83838"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgBtnCopiar"
            app:layout_constraintVertical_bias="0.269" />

        <EditText
            android:id="@+id/editTextLetra"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/fundo_button"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hintMudar"
            android:inputType="textPersonName"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/editMudarPraEssa"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/editMudarPraEssa"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="184dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/fundo_button"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hintPor"
            android:inputType="textPersonName"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/imgBtnCopiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:srcCompat="@drawable/ic_copy" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>